@@ -96,17 +96,6 @@ function addressbook_init($showerr = true, $onlylocal = false) {
         }
     }
 
-
-    /*
-     * hook allows to include different address book backends.
-     * plugins should extract $abook and $r from arguments
-     * and use same add_backend commands as above functions.
-     * @since 1.5.1 and 1.4.5
-     */
-    $hookReturn = do_hook('abook_init', $abook, $r);
-    $abook = $hookReturn[1];
-    $r = $hookReturn[2];
-
     /* Load global addressbook from SQL if configured */
     if (isset($addrbook_global_dsn) && !empty($addrbook_global_dsn)) {
         /* Database configured */
@@ -125,6 +114,16 @@ function addressbook_init($showerr = true, $onlylocal = false) {
             $abook_init_error.=_("Error initializing global addressbook.") . "\n" . $abook->error;
     }
     }
+
+    /*
+     * hook allows to include different address book backends.
+     * plugins should extract $abook and $r from arguments
+     * and use same add_backend commands as above functions.
+     * @since 1.5.1 and 1.4.5
+     */
+    $hookReturn = do_hook('abook_init', $abook, $r);
+    $abook = $hookReturn[1];
+    $r = $hookReturn[2];
 
     if (! $onlylocal) {
     /* Load configured LDAP servers (if PHP has LDAP support) */
